# generic-backend

./: .gitmodules  Dockerfile  README.md  main.py  manage.py  pyproject.toml
core/: settings.py  urls.py  views.py
handlers/: __init__.py  controller.py  githubHandler.py  interface.py  simpleHandler.py
