[project]
name = "generic-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dill>=0.4.0",
    "django>=5.2.8",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.16.1",
    "djangorestframework-api-key>=3.1.0",
    "dotenv>=0.9.9",
    "gitpython>=3.1.46",
    "ipykernel>=7.1.0",
    "load-dotenv>=0.1.0",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "sqlite-utils>=3.39",
]
